recursion.lessons.recursion.spiral.SpiralUse.scala.error
SpiralUse:3: error: ')' expected but ';' found.
    spiral(150,70,0,0.8;
                       ^